# NiuMaNotifier

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  event-center.html  index.html  package-lock.json  package.json  vite.config.ts
builtin-plugins/bark-runtime/: Cargo.toml
builtin-plugins/bark-runtime/src/: lib.rs  main.rs
builtin-plugins/claude-code-runtime/: Cargo.toml
builtin-plugins/claude-code-runtime/src/: lib.rs  main.rs  session_messages.rs  session_provider.rs  tests.rs
builtin-plugins/claude-code-runtime/src/claude/: discovery.rs  mod.rs  session_event_cursor.rs  session_file_index.rs  session_repository.rs
builtin-plugins/claude-code-runtime/src/claude/session_protocol/: current.rs  mod.rs
builtin-plugins/codex-runtime/: Cargo.toml
builtin-plugins/codex-runtime/src/: discovery.rs  lib.rs  logging.rs  main.rs  scanner.rs  session_messages.rs  session_provider.rs  session_provider_main.rs  tests.rs
builtin-plugins/codex-runtime/src/codex/: log_watcher.rs  mod.rs  session_event_cursor.rs  session_file_index.rs  session_identity.rs  session_repository.rs  session_watcher.rs
builtin-plugins/codex-runtime/src/codex/log_protocol/: current.rs  mod.rs
builtin-plugins/codex-runtime/src/codex/log_watcher/: tests.rs
builtin-plugins/codex-runtime/src/codex/session_protocol/: current.rs  mod.rs
builtin-plugins/codex-runtime/src/codex/session_watcher/: tests.rs
crates/niuma-api/: Cargo.toml
crates/niuma-api/src/: approval_proxy_watchdog.rs  handlers.rs  lib.rs  manual_test.rs  pending_action.rs  response.rs  routes.rs  sse.rs  state.rs  tests.rs  tool_sessions.rs
crates/niuma-api/src/handlers/: approval.rs  events.rs  listener.rs  plugins.rs  sessions.rs  shared.rs  state.rs
crates/niuma-cli/: Cargo.toml
crates/niuma-cli/src/: cli.rs  hook_runtime.rs  internal.rs  local_commands.rs  main.rs  output.rs  system_commands.rs
crates/niuma-cli/src/tools/claude_code/: interrupt.rs  managed.rs  mod.rs  send.rs  sessions.rs
crates/niuma-cli/src/tools/codex/: app_control.rs  hook.rs  hook_commands.rs  interrupt.rs  managed.rs  mod.rs  send.rs  sessions.rs
crates/niuma-cli/src/tools/codex/hook/: tests.rs
crates/niuma-cli/tests/: claude_hook_command.rs  cli_default.rs  internal_hook_stdout.rs
crates/niuma-core/: Cargo.toml
crates/niuma-core/config/: tool-notification-icons.json
crates/niuma-core/src/: api_response.rs  approval.rs  approval_arbitration.rs  claude_code_managed_control.rs  claude_code_managed_session.rs  claude_hook.rs  codex_hook.rs  codex_managed_control.rs  codex_managed_session.rs  config.rs  dashboard.rs  event_display.rs  hook_payload.rs  lib.rs  listener_config.rs  local_api_client.rs  main_state.rs  models.rs  notification.rs  notification_config.rs  notification_store.rs  plugin.rs  runtime_event.rs  state.rs  state_mutation.rs  store.rs  tool_metadata.rs  tool_session.rs  tool_session_rpc.rs
crates/niuma-core/src/api_response/: tests.rs
crates/niuma-core/src/hook_payload/: tests.rs
crates/niuma-core/src/notification/: tests.rs
crates/niuma-core/src/platform/: executable.rs  locale.rs  mod.rs  paths.rs
crates/niuma-core/src/plugin/: builtin.rs  config.rs  enablement.rs  filesystem.rs  manifest.rs  mod.rs  registry.rs  runtime_state.rs  tests.rs  validation.rs
crates/niuma-core/src/remote/: agent_state.rs  config.rs  connection_policy.rs  credentials.rs  device_identity.rs  e2ee.rs  login_flow.rs  mod.rs  rpc_envelope.rs  settings.rs  signaling.rs  transport.rs
crates/niuma-core/src/state/: tests.rs
crates/niuma-core/src/store/: config_files.rs  persistence.rs  public_events.rs  schema.rs  tests.rs  transitions.rs
crates/niuma-core/src/tools/codex/: hook.rs  log_watcher.rs  mod.rs  session_watcher.rs
crates/niuma-core/src/tools/codex/hook/: tests.rs
crates/niuma-core/src/tools/codex/log_protocol/: current.rs  mod.rs
crates/niuma-core/src/tools/codex/log_watcher/: tests.rs
crates/niuma-core/src/tools/codex/session_protocol/: current.rs  mod.rs
crates/niuma-core/src/tools/codex/session_watcher/: tests.rs
crates/niuma-core/tests/: tool_session_rpc.rs
crates/niuma-hook-helper/: Cargo.toml
crates/niuma-hook-helper/src/: main.rs
remote-client-web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
remote-server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
scripts/: sync-plugin-resources.mjs
src/: api.ts  appState.ts  dashboardAutoReturn.ts  dashboardController.ts  dashboardLayout.ts  eventCenterRuntime.ts  eventCenterView.ts  eventCenterWindow.ts  eventCenterWindowView.ts  i18n.ts  languageController.ts  main.ts  notificationView.ts  pluginController.ts  pluginIcon.ts  pluginRuntimeRefresh.ts  pluginSnapshot.ts  pluginTransition.ts  remoteAgentStatusRefresh.ts  remoteDiagnostics.ts  sessionControl.ts  sessionWorkbenchView.ts  settingsController.ts  settingsView.ts  sseClient.ts  statusView.ts  styles.css  viewUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  builtin_plugins.rs  commands.rs  macos.rs  main.rs  notification_runtime.rs  tray.rs
src-tauri/src/notification_runtime/: http_sender.rs
src-tauri/src/remote/: agent.rs  commands.rs  device_socket.rs  diagnostics.rs  local_api_bridge.rs  login_flow.rs  mod.rs  relay_runtime.rs  relay_transport.rs  rpc_router.rs  signaling.rs  status.rs  webrtc_transport.rs
src-tauri/src/tools/: mod.rs  plugin_runtime.rs
src-tauri/src/tools/codex/: session_runtime.rs
src-tauri/src/tools/codex/session_runtime/: discovery.rs  logging.rs  scanner.rs  tests.rs
tests/: dashboardAutoReturn.test.ts  eventCenterRender.test.ts  eventCenterRuntime.test.ts  eventCenterWindowView.test.ts  listenerToggleRender.test.ts  mainDashboardLayout.test.ts  notificationHistoryRender.test.ts  notificationSettingsLayout.test.ts  pluginRuntimeRefresh.test.ts  pluginSnapshot.test.ts  pluginTransition.test.ts  remoteAgentStatusRefresh.test.ts  remoteDiagnosticsRender.test.ts  (+6 more)
(+244 files in other folders)
