[workspace]
members = [
    "builtin-plugins/bark-runtime",
    "builtin-plugins/claude-code-runtime",
    "builtin-plugins/codex-runtime",
    "builtin-plugins/ntfy-runtime",
    "crates/niuma-api",
    "crates/niuma-cli",
    "crates/niuma-core",
    "crates/niuma-hook-helper",
    "src-tauri",
]
resolver = "2"

[workspace.package]
description = "A local desktop notifier for AI coding tool status and blocking requests."
edition = "2021"
homepage = "https://github.com/gaoxiao228/NiuMaNotifier#readme"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gaoxiao228/NiuMaNotifier"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
