[package]
name = "niuma-desktop"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
futures-util = "0.3"
http = "1"
niuma-api = { path = "../crates/niuma-api" }
niuma-core = { path = "../crates/niuma-core" }
once_cell = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
webrtc = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSResponder", "NSRunningApplication"] }

[dev-dependencies]
tempfile = "3"
