[package]
name = "niuma-claude-code-plugin-runtime"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
libc = "0.2"
niuma-core = { path = "../../crates/niuma-core" }
notify = "8"
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", default-features = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "niuma-claude-code-plugin"
path = "src/main.rs"
