[package]
name = "niuma-codex-plugin-runtime"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
libc = "0.2"
niuma-core = { path = "../../crates/niuma-core" }
notify = "8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", default-features = true }

[[bin]]
name = "niuma-codex-plugin"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
