[package]
name = "niuma-api"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-stream = "0.3"
axum = "0.7"
chrono.workspace = true
niuma-core = { path = "../niuma-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
