[package]
name = "niuma-cli"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "niuma"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
libc = "0.2"
niuma-api = { path = "../niuma-api" }
niuma-core = { path = "../niuma-core" }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }
which = "6"

[dev-dependencies]
tempfile = "3"
