[package]
name = "niuma-core"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
dirs = "6"
fs2 = "0.4"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3"
